[package]
name = "micron-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.6.1", features = ["derive"]}
pbkdf2 = "0.13.0"
prost = "0.14.4"
rand_core = "0.10.1"
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread", "time"]}
tonic = "0.14.6"
uuid = {version = "1.23.4", features = ["v4"]}

[[bin]]
name = "auth"
path = "src/client/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[build-dependencies]
tonic-prost-build = "0.14.6"
