[package]
name = "micron-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version = "4.6.1", features = ["derive"]}
pbkdf2 = { version = "0.12", features = ["simple"] } 
prost = "0.11"
rand_core = {version = "0.6", features = ["std"]}
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread", "time"]}
tonic = "0.9"
uuid = {version = "1.23.4", features = ["v4"]}

[[bin]]
name = "auth"
path = "src/auth-service/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "health-check"
path = "src/health-check-service/main.rs"

[build-dependencies]
tonic-build = "0.9"
